--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "stack": "node src/stack.js"
+    "stack": "node src/stack.js",
+    "set": "node src/set.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
