--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": false,
   "scripts": {
     "stack": "node src/stack.js",
-    "set": "node src/set.js"
+    "set": "node src/set.js",
+    "queue": "node src/queue.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
