--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "set": "node src/set.js",
     "priority-queue": "node src/priority-queue.js",
     "queue": "node src/queue.js",
-    "binary-search": "node src/binary-search-tree.js"
+    "bst": "node src/binary-search-tree.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
