Add package script 'hash-table'

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "set": "node src/set.js",
     "priority-queue": "node src/priority-queue.js",
     "queue": "node src/queue.js",
-    "bst": "node src/binary-search-tree.js"
+    "bst": "node src/binary-search-tree.js",
+    "hash-table": "node src/hash-table.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
