--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "queue": "node src/queue.js",
     "bst": "node src/binary-search-tree.js",
     "linked-list": "node src/linked-list.js",
-    "trie": "node src/trie.js"
+    "trie": "node src/trie.js",
+    "heap": "node src/heap.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
