--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bst": "node src/binary-search-tree.js",
     "linked-list": "node src/linked-list.js",
     "trie": "node src/trie.js",
-    "heap": "node src/heap.js"
+    "heap": "node src/heap.js",
+    "graph-bfs": "node src/graph-traversal-bfs.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
