--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "queue": "node src/queue.js",
     "bst": "node src/binary-search-tree.js",
     "hash-table": "node src/hash-table.js",
-    "linked-list": "node src/linked-list.js"
+    "linked-list": "node src/linked-list.js",
     "trie": "node src/trie.js",
     "heap": "node src/heap.js",
-    "graph-bfs": "node src/graph-traversal-bfs.js
+    "graph-bfs": "node src/graph-traversal-bfs.js"
 
   },
   "devDependencies": {
