Move eslint config to package.json

--- a/package.json
+++ b/package.json
@@ -17,12 +17,23 @@
     "trie": "node src/trie.js",
     "heap": "node src/heap.js",
     "graph-bfs": "node src/graph-traversal-bfs.js"
-
   },
   "devDependencies": {
     "eslint": "^7.7.0"
   },
   "dependencies": {
     "imgcat": "^2.3.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "commonjs": true,
+      "es2020": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 12
+    },
+    "rules": {}
   }
 }
